style.css
*, *::after, *::before{
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

body{
    height: 100vh;
    background: radial-gradient(circle at top, hsl(214, 47%, 23%), hsl(237, 49%, 15%));
    background-repeat: no-repeat;
    /* background-size: 100% 100%; */
    font-family: 'Barlow Semi Condensed', sans-serif;
}

div.wrapper{
    margin: 50px auto;
    width: 700px;
    /* border: 2px solid red; */
}

.wrapper .head{
    width: 700px;
    height: fit-content;
    border: 2px solid hsl(217, 16%, 45%);
    border-radius: 15px;
    padding: 20px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.wrapper .head div:first-child{
    width: fit-content;
}

.wrapper .head div:last-child{
    height: 120px;
    width: 150px;
    background-color: white;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.wrapper .head div:last-child span:first-child{
    letter-spacing: 2px;
    font-weight: 600;
    color: hsl(229, 64%, 46%);
}

.wrapper .head div:last-child span:last-child{
    font-weight: 700;
    font-size: 60px;
    padding: 0;
    line-height: 55px;
    color: hsl(250, 9.8%, 36.1%);
}

.rule{
    padding: 10px 30px;
    font-size: 15px;
    letter-spacing: 2px;
    color: white;
    border: 1px solid white;
    background-color: transparent;
    border-radius: 7px;
    position: absolute;
    right: 30px;
    bottom: 30px;
    cursor: pointer;
}

.rule-modal{
    background-color: white;
    height: fit-content;
    width: 420px;
    border-radius: 15px;
    padding: 30px 40px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 100;
}

.rule-modal div {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.rule-modal div span:first-child{
    font-size: 35px;
    font-weight: 700;
    color: hsl(229, 25%, 31%);
}

.rule-modal div:last-child{
    margin: 50px auto;
    margin-bottom: 10px;
    width: fit-content;
}

.modal-cover{
    position: absolute;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
    background-color: rgba(0, 0, 0, 0.5);
}

.modal-close{
    cursor: pointer;
}

.modal-cover,
.rule-modal{
    display: none;
}

.show{
    display: block;
}






@media only screen and (max-width: 768px) {
    div.wrapper{
        width: 85vw;
        
    }
    
    .wrapper .head{
        padding: 3vw;
        border-radius: 1vw;
        width: 85vw;
        margin-top: 5vw;

    }

    .wrapper .head div:last-child{
        height: 15vw;
        width: 18vw;
        border-radius: 1vw;
    }

    .wrapper .head div:last-child span:first-child{
        font-size: 2vw;
    }

    .wrapper .head div:last-child span:last-child{
        font-size: 8vw;
        line-height: 7vw;
    }

    .wrapper .head div:first-child img{
        height: auto;
        width: 20vw;
    }
}



@media only screen and (max-width: 550px){
    .rule{
        right: calc(50vw - 61.01px);
    }
}

@media only screen and (max-width: 470px){
    .rule-modal{
        height: 100vh;
        width: 100vw;
        border-radius: 0;
    }
}

